--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live video</title>
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
     <header>
-        <img src="#" alt="HIWOW logo">
+        <img src="./img/logo.png" alt="HIWOW logo">
         <nav>
             <a href="#">Home</a>
             <a href="#">Project</a>
@@ -18,6 +21,7 @@
             <a href="#">Contact</a>
         </nav>
     </header>
+
     <main>
         <div>
             <h1>Live video</h1>
@@ -25,13 +29,14 @@
             <a href="#">Download</a>
         </div>
     </main>
+
     <footer>
         <div>
             <a href="#">TW</a>
             <a href="#">FB</a>
             <a href="#">IN</a>
         </div>
-        <p>Copyright (c) 2024. All rights reserved.</p>
+        <p>Copyright &#169; 2024. All rights reserved.</p>
     </footer>
 </body>
 
