--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live video</title>
+    <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -27,6 +28,11 @@
             <h1>Live video</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis provident temporibus sint accusamus tempora quasi illo nam, laboriosam sapiente facilis nesciunt error ab eveniet cumque deleniti minus pariatur itaque. Deleniti!</p>
             <a href="#">Download</a>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus omnis asperiores maiores pariatur commodi sequi tempora hic neque. Iusto minima alias iure nobis excepturi incidunt voluptatem eligendi tempore, omnis magni.</p>
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit exercitationem autem accusantium officia ducimus amet atque, quaerat eius nisi facere repudiandae est enim porro deserunt itaque, alias at quae harum!</p>
         </div>
     </main>
 
