--- a/index.html
+++ b/index.html
@@ -12,37 +12,32 @@
 </head>
 
 <body>
-    <header>
-        <img src="./img/logo.png" alt="HIWOW logo">
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Project</a>
-            <a href="#">About</a>
-            <a href="#">Service</a>
-            <a href="#">Contact</a>
+    <header class="container">
+        <img class="logo" src="./img/logo.png" alt="HIWOW logo">
+        <nav class="main-nav">
+            <a class="link" href="#">Home</a>
+            <a class="link" href="#">Project</a>
+            <a class="link" href="#">About</a>
+            <a class="link" href="#">Service</a>
+            <a class="link" href="#">Contact</a>
         </nav>
     </header>
 
-    <main>
-        <div>
-            <h1>Live video</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis provident temporibus sint accusamus tempora quasi illo nam, laboriosam sapiente facilis nesciunt error ab eveniet cumque deleniti minus pariatur itaque. Deleniti!</p>
-            <a href="#">Download</a>
-        </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus omnis asperiores maiores pariatur commodi sequi tempora hic neque. Iusto minima alias iure nobis excepturi incidunt voluptatem eligendi tempore, omnis magni.</p>
-
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit exercitationem autem accusantium officia ducimus amet atque, quaerat eius nisi facere repudiandae est enim porro deserunt itaque, alias at quae harum!</p>
+    <main class="container">
+        <div class="column">
+            <h1 class="main-title">Live video</h1>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis provident temporibus sint accusamus tempora quasi illo nam, laboriosam sapiente facilis nesciunt error ab eveniet cumque deleniti minus pariatur itaque. Deleniti!</p>
+            <a class="btn" href="#">Download</a>
         </div>
     </main>
 
-    <footer>
-        <div>
-            <a href="#">TW</a>
-            <a href="#">FB</a>
-            <a href="#">IN</a>
+    <footer class="container">
+        <div class="social-list">
+            <a class="icon" href="#">TW</a>
+            <a class="icon" href="#">FB</a>
+            <a class="icon" href="#">IN</a>
         </div>
-        <p>Copyright &#169; 2024. All rights reserved.</p>
+        <p class="copyright">Copyright &#169; 2024. All rights reserved.</p>
     </footer>
 </body>
 
