--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live video</title>
+    <!-- base -->
     <link rel="stylesheet" href="./css/base.css">
+    <!-- Vendor / 3rd party -->
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <!-- components -->
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <!-- custom -->
 </head>
 
 <body>
@@ -33,9 +38,9 @@
 
     <footer class="container">
         <div class="social-list">
-            <a class="icon" href="#">TW</a>
-            <a class="icon" href="#">FB</a>
-            <a class="icon" href="#">IN</a>
+            <a class="icon fa fa-twitter" href="https:www.example.com" target="_blank"> </a>
+            <a class="icon fa fa-facebook" href="https:www.example.com"" target=" blank"> </a>
+            <a class="icon fa fa-instagram" href="/" target="_blank"> </a>
         </div>
         <p class="copyright">Copyright &#169; 2024. All rights reserved.</p>
     </footer>
