background-image done

--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
             <h1 class="main-title">Live video</h1>
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis provident temporibus sint accusamus tempora quasi illo nam, laboriosam sapiente facilis nesciunt error ab eveniet cumque deleniti minus pariatur itaque. Deleniti!</p>
             <a class="btn" href="#">Download</a>
+            <i class="fa fa-close"> </i>
         </div>
     </main>
 
     <footer class="container">
         <div class="social-list">
-            <a class="icon fa fa-twitter" href="https:www.example.com" target="_blank"> </a>
-            <a class="icon fa fa-facebook" href="https:www.example.com"" target=" blank"> </a>
-            <a class="icon fa fa-instagram" href="/" target="_blank"> </a>
+            <a class="icon fa fa-twitter" href="https://www.examples.com" target="_blank"></a>
+            <a class="icon fa fa-facebook" href="https://en.wikipedia.org/wiki/Email_address#Local-part" target="_blank"></a>
+            <a class="icon fa fa-instagram" href="https://en.wikipedia.org/wiki/Email_address#Domain" target="_blank"></a>
         </div>
         <p class="copyright">Copyright &#169; 2024. All rights reserved.</p>
     </footer>
+    <div class="hero"></div>
 </body>
 
 </html>
